@@ -1,5 +1,10 @@
 2008-11-22  Paolo Borelli  <pborelli@katamail.com>
 
+	* src/baobab.c:
+	Fix excluded locations sanity check.
+
+2008-11-22  Paolo Borelli  <pborelli@katamail.com>
+
 	* src/baobab.c: (baobab_is_excluded_location):
 	Fix logic bug that made it return always FALSE.
 
